--- a/packages/structure/package.json
+++ b/packages/structure/package.json
@@ -6,6 +6,7 @@
     "coverage": "vitest run --coverage"
   },
   "devDependencies": {
+    "@vitest/ui": "^0.7.12",
     "c8": "^7.11.0",
     "vitest": "^0.7.11"
   }
